--- a/ytcli.csproj
+++ b/ytcli.csproj
@@ -9,6 +9,9 @@
 
   <ItemGroup>
     <PackageReference Include="FFMpegCore" Version="5.2.0" />
+    <PackageReference Include="Spectre.Console" Version="0.51.1" />
+    <PackageReference Include="Spectre.Console.Cli" Version="0.51.1" />
+    <PackageReference Include="System.CommandLine" Version="2.0.0-rc.1.25451.107" />
     <PackageReference Include="YoutubeExplode" Version="6.5.4" />
   </ItemGroup>
 
